Used Math#clamp